# mkdocs-material-test

./: .envrc  404.html  CLAUDE.md  README.md  check-blogs.js  check-blogs.sh  index.html  main.py  mkdocs.yml  process_archive.py  project-words.txt  pyproject.toml  sitemap.xml  tags.json
2020-03-02-j-core-links/: index.html
2023-03-16-Links/: index.html
2023-03-16-Links-iPad/: index.html
2023-03-21-Julia/: index.html
2023-04-08-Julia-Drawing/: index.html
2023-04-14-Neovim-Lua/: index.html
2023-05-01-VFD-3-Phase-Converter/: index.html
2023-09-04-Writing-A-Programming-Language/: index.html
2023-09-09-Picocomputer/: index.html
2023-11-05-Pi-Pico/: index.html
2023-11-15-Home-Assistant-ESPHome/: index.html
2023-11-24-Links/: index.html
2023-12-08-Links/: index.html
2024-01-17-Links/: index.html
2024-01-17-Microsoft-Surface-Laptop-4/: index.html
2024-01-28-Git/: index.html
2024-02-12-chezmoi/: index.html
2024-02-13-Helix/: index.html
2024-02-29-NixOS/: index.html
2024-03-10-How-I-Learned-Rust/: index.html
2024-03-17-Asbestos-Roof-Replacement/: index.html
2024-03-24-House-Electrics/: index.html
2024-04-14-Plumbing/: index.html
2024-05-05-Links/: index.html
2024-05-05-Rust-Data/: index.html
2024-05-05-Rust-Embedded/: index.html
2024-05-05-Rust-General/: index.html
2024-06-15-Open-Energy-Monitor-Emon/: index.html
2024-08-04-Lathe-Milling/: index.html
2024-08-17-Phase-Locked-Loop-PLL/: index.html
2024-08-25-Arduino/: index.html
2024-08-26-LCD-1602-Pushbutton/: index.html
2024-09-15-FreeCAD/: index.html
(+266 files in other folders)
