[project]
name = "mkdocs-material-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-material>=9.0",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs-minify-plugin>=0.8.0",
]
